--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,15 @@
 <resources>
     <string name="app_name">InstragramClone</string>
-    <string name="stephanie_hallberg">stephanie.hallberg</string>
-    <string name="profile_menu">profile_menu</string>
 
-    <!-- Account Settings Menu -->
+    <!-- Fragment names -->
     <string name="edit_profile_fragment">Edit Profile</string>
     <string name="sign_out_fragment">Sign out</string>
 
     <!-- Firebase messages -->
     <string name="auth_failed">Failed to Authenticate</string>
     <string name="auth_success">Authentication Success</string>
+
+    <!-- Firebase database fields -->
+    <string name="dbname_users">users</string>
+    <string name="dbname_user_account_settings">user_account_settings</string>
 </resources>
