ShareActivity Layout and Tabs

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,8 @@
     <!-- activity names -->
     <string name="profile_activity">Profile Activity</string>
 
+    <!-- random -->
+    <string name="gallery">GALLERY</string>
+    <string name="photo">PHOTO</string>
+
 </resources>
