Setup Gallery and Photo Fragments

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,5 +33,6 @@
     <!-- random -->
     <string name="gallery">GALLERY</string>
     <string name="photo">PHOTO</string>
+    <string name="open_camera">Open Camera</string>
 
 </resources>
