New Profile Photo Using Camera

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,7 @@
     <string name="calling_activity">calling_activity</string>
     <string name="selected_image">selected_image</string>
     <string name="return_to_fragment">return_to_fragment</string>
+    <string name="selected_bitmap">selected_bitmap</string>
 
     <!-- activity names -->
     <string name="profile_activity">Profile Activity</string>
@@ -43,5 +44,6 @@
     <string name="open_camera">Open Camera</string>
     <string name="next">Next</string>
     <string name="string_share">Share</string>
+
 
 </resources>
