--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="view_post_fragment">View Post</string>
     <string name="sign_out_fragment">Sign out</string>
     <string name="profile_fragment">Profile</string>
+    <string name="view_comments_fragment">View Comments</string>
 
     <!-- Dialog names -->
     <string name="confirm_password_dialog">ConfirmPasswordDialog</string>
@@ -32,6 +33,7 @@
     <string name="field_photo_id">photo_id</string>
     <string name="field_tags">tags</string>
     <string name="field_image_path">image_path</string>
+    <string name="field_comments">comments</string>
 
     <!-- photo types -->
     <string name="new_photo">new_photo</string>
@@ -55,6 +57,7 @@
     <string name="open_camera">Open Camera</string>
     <string name="next">Next</string>
     <string name="string_share">Share</string>
+
 
 
 </resources>
